changed nav bar

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,4 +1,4 @@
-.navbar {
+/*.navbar {
   width: 100%;
   background: #f9f9f9;
   border-bottom: 1px solid #e5e5e5;
@@ -32,4 +32,4 @@
 .navbar-list li a:focus {
   color: rgb(240, 61, 172);
   outline: none;
-}
+}*/
