--- a/src/App.css
+++ b/src/App.css
@@ -23,14 +23,15 @@
   width: 35vw;
   max-width: 400px;
   min-width: 100px;
-  padding-top: 3rem;
-  padding-right: 3rem;
+  margin-right: 2rem;
   margin-left: auto;
+  display: flex;            
 }
 
 .profile img {
-  width: 100%;
-  height: auto;
+  width: 60vw;
+  max-width: 600px;
+  min-width: 250px;
   border-radius: 16px;
 }
 
