--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,8 @@ body, #root {
   flex: 1;
   min-width: 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: column;  
+  margin-left: 2rem;
 }
 
 .app-content {
