updated contact page

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,12 @@ body, #root {
   margin-left: 2rem;
 }
 
+.right-col {
+  display: flex;
+  flex-direction: column;  
+  margin-right: 2rem;
+}
+
 .app-content {
   flex: 1;
 }
@@ -33,8 +39,6 @@ body, #root {
   width: 35vw;
   max-width: 400px;
   min-width: 100px;
-  margin-right: 2rem;
-  margin-left: auto;
   display: flex;            
 }
 
