--- a/src/App.css
+++ b/src/App.css
@@ -10,25 +10,46 @@ body, #root {
   flex-direction: column;
 }
 
+.left-right-row {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+}
+
 .header-row {
   display: flex;
   align-items: flex-start;
-  padding: 1rem;
+  flex-direction: column;
   font-weight: normal;
+}
+
+.title-underline {
+  height: 1.5px;
+  background: rgb(225, 222, 223);
+  width: 67%;
+  border-radius: 2px;
+}
+
+.bottom-row{
+  display: flex;
+  align-items: flex-start;
+  gap: 2rem;
+  margin-left:0;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .left-col {
   flex: 1;
-  min-width: 0;
-  display: flex;
-  flex-direction: column;  
-  margin-left: 2rem;
+  min-width: 0; 
+  margin-left: 5rem;
 }
 
 .right-col {
   display: flex;
   flex-direction: column;  
-  margin-right: 2rem;
+  align-items: flex-end;
+  margin-right: 4rem;
 }
 
 .app-content {
@@ -58,39 +79,3 @@ h1,
   font-weight: 300;
 }
 
-@media (max-width: 900px) {
-  .header-row {
-    flex-direction: column-reverse;
-    align-items: center;
-    gap: 1rem;
-  }
-
-  .profile {
-    width: 50vw;
-    max-width: 250px;
-    padding-top: 0.2rem;
-    padding-right: 0.2rem;
-    margin-left: 0;
-  }
-
-  .left-col {
-    width: 100%;
-    align-items: center;
-  }
-
-  .info-boxes {
-    justify-content: center;
-  }
-
-  .title h1, 
-  .title .subtitle {
-    font-size: 1.5rem;
-  }
-}
-
-.title-underline {
-  height: 1.5px;
-  background: rgb(225, 222, 223);
-  width: 67%;
-  border-radius: 2px;
-}
