--- a/src/components/ContactPage.css
+++ b/src/components/ContactPage.css
@@ -38,7 +38,7 @@
   color: rgb(240, 61, 172);
   border: none;
   border-radius: 2rem;
-  padding: 0.5rem 1.5rem;
+  padding: 5px 5px;
   font-size: 1rem;
   font-weight: 500;
   cursor: pointer;
@@ -65,6 +65,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  padding: 5px 5px;
   justify-content: space-between;
   width: 100%;
 }
