--- a/src/App.css
+++ b/src/App.css
@@ -8,59 +8,60 @@ body, #root {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background: linear-gradient(135deg, #ffe3f1 0%, #e0f7fa 100%);
 }
 
-.left-right-row {
-  display: flex;
-  align-items: flex-start;
-  width: 100%;
+.title {
+  text-align: center;
 }
 
-.header-row {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  font-weight: normal;
+.container-phone .subtitle {
+  margin-top: -1.5rem; /* or 0, or a negative value to pull it closer */
+}
+
+.container-phone h1 {
+  text-align: center;
+}
+
+.container-fluid {
+  padding-left: 7rem; 
+  padding-right: 7rem;
 }
 
 .title-underline {
   height: 1.5px;
   background: rgb(225, 222, 223);
-  width: 68%;
+  width: 72%;
   border-radius: 2px;
-}
-
-.bottom-row{
-  display: flex;
-  align-items: flex-start;
-  gap: 2rem;
-  margin-left:0;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.left-col {
-  flex: 1;
-  min-width: 0; 
-  margin-left: 5rem;
-}
-
-.right-col {
-  display: flex;
-  flex-direction: column;  
-  align-items: flex-end;
-  margin-right: 4rem;
 }
 
 .app-content {
   flex: 1;
 }
 
+.title-row {
+  display: flex;
+  align-items:flex-start;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+.title-col {
+  flex: 1;
+}
+
+.infobox-row {
+  display: flex;
+  gap: 2rem;
+  margin-top: 1rem;
+}
+
 .profile {
   width: 35vw;
   max-width: 400px;
   min-width: 100px;
-  display: flex;            
+  display: flex;
+  align-items: flex-start;
 }
 
 .profile img {
@@ -79,3 +80,11 @@ h1,
   font-weight: 300;
 }
 
+.container-phone {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding-left: 1rem; 
+  padding-right: 1rem;
+  align-items: center;
+}
