--- a/src/components/WorkPage.css
+++ b/src/components/WorkPage.css
@@ -1,12 +1,19 @@
-.work-container {
-  max-width: 900px;
-  margin: 2rem auto;
-    padding: 2.0rem;
+.container {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 
+.resume{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .resume-section {
   margin-bottom: 2rem;
+  max-width: 1100px;
 }
 
 .resume-section h3 {
@@ -14,20 +21,21 @@
   margin-bottom: 1rem;
 }
 
-.work-container 
-.info-box{
-  margin-bottom: 2rem;
-}
-
 .projects-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
+  max-width: 1100px;
+  margin-bottom: 1rem;
 }
 
 .project-link {
   text-decoration: none;
   color: inherit;
+  border: 2px solid rgb(226, 224, 225); 
+  border-radius: 1.2rem;           
+  padding: 1.2rem;
+  background: #fefefe;
   transition: box-shadow 0.2s, transform 0.2s;
 }
 .project-link:hover {
@@ -59,7 +67,7 @@
 }
 
 .tech-tag {
-  background: #f0f0f0;
+  background: rgb(255, 214, 239);
   color: #333;
   border-radius: 1rem;
   padding: 0.2rem 0.8rem;
