--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,21 @@
 @font-face {
-  font-family: 'GeneralSans-Variable';
-  src: url('./assets/GeneralSans-Variable.ttf') format('truetype');
+  font-family: "GeneralSans-Variable";
+  src: url("./assets/GeneralSans-Variable.ttf") format("truetype");
 }
 
-body, #root {
-  font-family: 'GeneralSans-Variable', sans-serif;
+body,
+#root {
+  font-family: "GeneralSans-Variable", sans-serif;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background: linear-gradient(135deg, #ffe3f1 0%, #e0f7fa 100%);
+  background: url("/blogbg.jpeg");
+  background-size: cover;
+
+  /*
+  background: url("/bg.jpeg") no-repeat center center fixed;
+  background-size: cover;
+  */
 }
 
 .title {
@@ -16,7 +23,7 @@ body, #root {
 }
 
 .container-phone .subtitle {
-  margin-top: -1.5rem; 
+  margin-top: -1.5rem;
 }
 
 .container-phone h1 {
@@ -24,7 +31,7 @@ body, #root {
 }
 
 .container-fluid {
-  padding-left: 7rem; 
+  padding-left: 7rem;
   padding-right: 7rem;
 }
 
@@ -41,7 +48,7 @@ body, #root {
 
 .title-row {
   display: flex;
-  align-items:flex-start;
+  align-items: flex-start;
   justify-content: space-between;
   gap: 2rem;
 }
@@ -66,9 +73,10 @@ body, #root {
 
 .profile img {
   width: 60vw;
-  max-width: 600px;
+  max-width: 500px;
   min-width: 250px;
   border-radius: 16px;
+  margin-bottom: 20px;
 }
 
 .subtitle {
@@ -76,7 +84,7 @@ body, #root {
 }
 
 h1,
-.subtitle{
+.subtitle {
   font-weight: 300;
 }
 
@@ -84,7 +92,7 @@ h1,
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  padding-left: 1rem; 
+  padding-left: 1rem;
   padding-right: 1rem;
   align-items: center;
 }
