--- a/src/App.css
+++ b/src/App.css
@@ -38,9 +38,16 @@ body,
 .title-underline {
   height: 1.5px;
   background: rgb(225, 222, 223);
-  width: 33%;
+  width: 35%;
   border-radius: 2px;
   margin-top: -10px;
+  margin-bottom: 1rem;
+}
+
+.hover-effect
+.info-box:hover {
+  box-shadow: 0 4px 16px rgba(240, 61, 172, 0.15);
+  transform: translateY(-2px) scale(1.02);
 }
 
 .app-content {
