--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,10 @@ body,
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background: url("/blogbg.jpeg");
-  background-size: cover;
+  background: #f5f4f4;
 }
-
-.title {
-  text-align: center;
+.current-work .info-box-header {
+  color: rgba(125, 65, 168, 0.93);
 }
 
 .container-phone .subtitle {
@@ -31,26 +29,34 @@ body,
 }
 
 .title-underline {
-  height: 1.5px;
-  background: rgb(225, 222, 223);
-  width: 35%;
-  border-radius: 2px;
+  height: 5px;
+  background: linear-gradient(
+    90deg,
+    rgba(125, 65, 168, 0.93),
+    rgba(210, 156, 248, 0.93)
+  );
+  width: 8%;
+  border-radius: 4px;
   margin-top: -10px;
   margin-bottom: 1rem;
 }
 
-.hover-effect
-.info-box:hover {
-  box-shadow: 0 4px 16px rgba(240, 61, 172, 0.15);
+.sticky-top .title-underline {
+  background: linear-gradient(
+    90deg,
+    rgba(125, 65, 168, 0.93),
+    rgba(210, 156, 248, 0.93),
+    rgba(125, 65, 168, 0.93)
+  );
+}
+
+.hover-effect .info-box:hover {
+  box-shadow: 0 4px 16px rgba(176, 35, 241, 0.224);
   transform: translateY(-2px) scale(1.02);
 }
 
 .app-content {
   flex: 1;
-}
-
-.subtitle {
-  color: rgb(240, 61, 172);
 }
 
 h1,
